--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "hls.js": "^1.5.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.17.4",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
